fix scrollbar sub-menu

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1484,10 +1484,10 @@ html {
 .menu-column__list {
   margin-top: 20px;
 }
-.menu-column__item:hover .sub-menu {
+.menu-column__item--active .sub-menu {
   display: grid;
 }
-.menu-column__item:hover > .menu-column__link {
+.menu-column__item--active > .menu-column__link, .menu-column__item:hover > .menu-column__link {
   color: #0071dc;
   font-weight: 500;
 }
