--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -81,9 +81,10 @@
         margin-top: 20px;
     }
     &__item {
-        &:hover .sub-menu {
+        &--active .sub-menu {
             display: grid;
         }
+        &--active > .menu-column__link,
         &:hover > .menu-column__link {
             color: #0071dc;
             font-weight: 500;
